--- a/app/views/enforcement/v4/named-on-notice/person-name.html
+++ b/app/views/enforcement/v4/named-on-notice/person-name.html
@@ -27,7 +27,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="added-people" method="post">
+    <form action="added-names" method="post">
 
       <span class="govuk-caption-l">
         Tell us who was on the enforcement notice
