Enforcement updates, button groups and other appeals q comes back

--- a/app/views/enforcement/v4/appeal-site/other-appeals.html
+++ b/app/views/enforcement/v4/appeal-site/other-appeals.html
@@ -24,7 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form method="post">
+      <form action="otherappeals" method="post">
 
         <span class="govuk-caption-l">
           Tell us about the appeal site
@@ -72,16 +72,17 @@
           ]
         }) }}
 
+        <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Save and continue"
+          }) }}
 
-        {{ govukButton({
-          text: "Save and continue"
-        }) }}
-
-        {{ govukButton({
-          href: "",
-          text: "Save and come back later",
-          classes: "govuk-button--secondary"
-        }) }}
+          {{ govukButton({
+            href: "",
+            text: "Save and come back later",
+            classes: "govuk-button--secondary"
+          }) }}
+        </div>
 
       </form>
 
