--- a/app/views/enforcement/v4/appeal-site/grid-address.html
+++ b/app/views/enforcement/v4/appeal-site/grid-address.html
@@ -110,16 +110,18 @@
             Tell us the address using a postcode address
           </a>
         </p>
+        
+        <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Save and continue"
+          }) }}
 
-        {{ govukButton({
-          text: "Save and continue"
-        }) }}
-
-        {{ govukButton({
-          href: "",
-          text: "Save and come back later",
-          classes: "govuk-button--secondary"
-        }) }}
+          {{ govukButton({
+            href: "",
+            text: "Save and come back later",
+            classes: "govuk-button--secondary"
+          }) }}
+        </div>
 
       </form>
 
