--- a/app/views/enforcement/v4/appeal-site/postcode-address.html
+++ b/app/views/enforcement/v4/appeal-site/postcode-address.html
@@ -100,15 +100,17 @@
           </a>
         </p>
 
-        {{ govukButton({
-          text: "Save and continue"
-        }) }}
+        <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Save and continue"
+          }) }}
 
-        {{ govukButton({
-          href: "",
-          text: "Save and come back later",
-          classes: "govuk-button--secondary"
-        }) }}
+          {{ govukButton({
+            href: "",
+            text: "Save and come back later",
+            classes: "govuk-button--secondary"
+          }) }}
+        </div>
 
       </form>
 
