--- a/app/views/enforcement/v4/appeal-site/site-visibility.html
+++ b/app/views/enforcement/v4/appeal-site/site-visibility.html
@@ -68,16 +68,17 @@
           ]
         }) }}
 
+        <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Save and continue"
+          }) }}
 
-        {{ govukButton({
-          text: "Save and continue"
-        }) }}
-
-        {{ govukButton({
-          href: "",
-          text: "Save and come back later",
-          classes: "govuk-button--secondary"
-        }) }}
+          {{ govukButton({
+            href: "",
+            text: "Save and come back later",
+            classes: "govuk-button--secondary"
+          }) }}
+        </div>
 
       </form>
 
