--- a/app/views/enforcement/v4/before-you-continue.html
+++ b/app/views/enforcement/v4/before-you-continue.html
@@ -57,16 +57,17 @@
 
     <div class="govuk-button-group">
 
-      {{ govukButton({
-        href: "task-list",
-        text: "Save and continue"
-      }) }}
+      <div class="govuk-button-group">
+        {{ govukButton({
+          text: "Continue to the appeal"
+        }) }}
 
-      {{ govukButton({
-        href: "",
-        text: "Save and come back later",
-        classes: "govuk-button--secondary"
-      }) }}
+        {{ govukButton({
+          href: "",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
+        }) }}
+      </div>
 
     </div>
 
