--- a/app/views/enforcement/v4/check-your-answers.html
+++ b/app/views/enforcement/v4/check-your-answers.html
@@ -669,16 +669,17 @@
 
         </dl>
 
-        {{ govukButton({
-          href: "declaration",
-          text: "Save and continue"
-        }) }}
+        <div class="govuk-button-group">
+          {{ govukButton({
+            text: "Save and continue"
+          }) }}
 
-        {{ govukButton({
-          href: "",
-          text: "Save and come back later",
-          classes: "govuk-button--secondary"
-        }) }}
+          {{ govukButton({
+            href: "",
+            text: "Save and come back later",
+            classes: "govuk-button--secondary"
+          }) }}
+        </div>
 
       </form>
 
