--- a/app/views/enforcement/v4/grounds/groundA.html
+++ b/app/views/enforcement/v4/grounds/groundA.html
@@ -97,50 +97,53 @@
         </p>
 
         {% endif %}
+        <div class="govuk-button-group">
 
-        <!-- route user based on what they selected -->
-        {% if data['grounds-2'] %}
-          {{ govukButton({
-            href: "groundB",
-            text: "Save and continue"
-          }) }}
-        {% elif data['grounds-3'] %}
-          {{ govukButton({
-            href: "groundC",
-            text: "Save and continue"
-          }) }}
-        {% elif data['grounds-4'] %}
-          {{ govukButton({
-            href: "groundD",
-            text: "Save and continue"
-          }) }}
-        {% elif data['grounds-5'] %}
-          {{ govukButton({
-            href: "groundE",
-            text: "Save and continue"
-          }) }}
-        {% elif data['grounds-6'] %}
-          {{ govukButton({
-            href: "groundF",
-            text: "Save and continue"
-          }) }}
-        {% elif data['grounds-7'] %}
-          {{ govukButton({
-            href: "groundG",
-            text: "Save and continue"
-          }) }}
-        {% else %}
-          {{ govukButton({
-            href: "application",
-            text: "Save and continue"
-          }) }}
-        {% endif %}
+          <!-- route user based on what they selected -->
+          {% if data['grounds-2'] %}
+            {{ govukButton({
+              href: "groundB",
+              text: "Save and continue"
+            }) }}
+          {% elif data['grounds-3'] %}
+            {{ govukButton({
+              href: "groundC",
+              text: "Save and continue"
+            }) }}
+          {% elif data['grounds-4'] %}
+            {{ govukButton({
+              href: "groundD",
+              text: "Save and continue"
+            }) }}
+          {% elif data['grounds-5'] %}
+            {{ govukButton({
+              href: "groundE",
+              text: "Save and continue"
+            }) }}
+          {% elif data['grounds-6'] %}
+            {{ govukButton({
+              href: "groundF",
+              text: "Save and continue"
+            }) }}
+          {% elif data['grounds-7'] %}
+            {{ govukButton({
+              href: "groundG",
+              text: "Save and continue"
+            }) }}
+          {% else %}
+            {{ govukButton({
+              href: "application",
+              text: "Save and continue"
+            }) }}
+          {% endif %}
 
-        {{ govukButton({
-          href: "",
-          text: "Save and come back later",
-          classes: "govuk-button--secondary"
-        }) }}
+          {{ govukButton({
+            href: "",
+            text: "Save and come back later",
+            classes: "govuk-button--secondary"
+          }) }}
+
+        </div>
 
       </div>
     </div>
