--- a/app/views/enforcement/v4/grounds/groundG.html
+++ b/app/views/enforcement/v4/grounds/groundG.html
@@ -98,17 +98,21 @@
 
         {% endif %}
 
-        <!-- go to application question -->
-        {{ govukButton({
-          href: "application",
-          text: "Save and continue"
-        }) }}
+        <div class="govuk-button-group">
 
-        {{ govukButton({
-          href: "",
-          text: "Save and come back later",
-          classes: "govuk-button--secondary"
-        }) }}
+          <!-- go to application question -->
+          {{ govukButton({
+            href: "application",
+            text: "Save and continue"
+          }) }}
+
+          {{ govukButton({
+            href: "",
+            text: "Save and come back later",
+            classes: "govuk-button--secondary"
+          }) }}
+
+        </div>
 
       </div>
     </div>
