--- a/app/views/enforcement/v4/named-on-notice/added-names.html
+++ b/app/views/enforcement/v4/named-on-notice/added-names.html
@@ -34,30 +34,33 @@
         {{ title }}
       </h1>
 
-
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
 
-        <div class="govuk-summary-list__row">
-          <dt class="govuk-summary-list__key govuk-!-width-one-quarter">
-            Individual
-          </dt>
-          <dd class="govuk-summary-list__value  govuk-!-width-one-half">
-            {{ data["enforcement-first-name"] }}
-            {{ data["enforcement-last-name"] }}
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="#">
-              Change<span class="govuk-visually-hidden"> name</span>
-            </a>
-          </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="#">
-              Remove<span class="govuk-visually-hidden"> Nic Griffchon</span>
-            </a>
-          </dd>
-        </div>
+        <!-- person if one is named -->
+        {% if data['enforcement-first-name'] %}
 
-        <!-- company name first if one is named -->
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key govuk-!-width-one-quarter">
+              Individual
+            </dt>
+            <dd class="govuk-summary-list__value  govuk-!-width-one-half">
+              {{ data["enforcement-first-name"] }}
+              {{ data["enforcement-last-name"] }}
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Change<span class="govuk-visually-hidden"> name</span>
+              </a>
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">
+                Remove<span class="govuk-visually-hidden"> Nic Griffchon</span>
+              </a>
+            </dd>
+          </div>
+        {% endif %}
+
+        <!-- company name if one is named -->
         {% if data['enforcement-company-name'] %}
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key govuk-!-width-one-quarter">
@@ -132,6 +135,7 @@
       }) }}
 
       <div class="govuk-button-group">
+
         {{ govukButton({
           text: "Save and continue"
         }) }}
@@ -141,6 +145,7 @@
           text: "Save and come back later",
           classes: "govuk-button--secondary"
         }) }}
+        
       </div>
 
     </form>
