--- a/app/views/enforcement/v4/named-on-notice/person-name.html
+++ b/app/views/enforcement/v4/named-on-notice/person-name.html
@@ -60,15 +60,19 @@
 
       </<fieldset>
 
-      {{ govukButton({
-        text: "Save and continue"
-      }) }}
+      <div class="govuk-button-group">
 
-      {{ govukButton({
-        href: "",
-        text: "Save and come back later",
-        classes: "govuk-button--secondary"
-      }) }}
+        {{ govukButton({
+          text: "Save and continue"
+        }) }}
+
+        {{ govukButton({
+          href: "",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
+        }) }}
+
+      </div>
 
     </form>
 
