--- a/app/views/enforcement/v4/procedure/inquiry-witnesses.html
+++ b/app/views/enforcement/v4/procedure/inquiry-witnesses.html
@@ -45,15 +45,19 @@
         value: data["enforcement-inquiry-witnesses"]
       }) }}
 
-      {{ govukButton({
-        text: "Save and continue"
-      }) }}
+      <div class="govuk-button-group">
 
-      {{ govukButton({
-        href: "",
-        text: "Save and come back later",
-        classes: "govuk-button--secondary"
-      }) }}
+        {{ govukButton({
+          text: "Save and continue"
+        }) }}
+
+        {{ govukButton({
+          href: "",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
+        }) }}
+        
+      </div>
 
     </form>
 
