--- a/app/views/enforcement/v4/upload/additional-documents.html
+++ b/app/views/enforcement/v4/upload/additional-documents.html
@@ -94,15 +94,19 @@
         '
       }) }}
 
-      {{ govukButton({
-        text: "Save and continue"
-      }) }}
+      <div class="govuk-button-group">
 
-      {{ govukButton({
-        href: "",
-        text: "Save and come back later",
-        classes: "govuk-button--secondary"
-      }) }}
+        {{ govukButton({
+          text: "Save and continue"
+        }) }}
+
+        {{ govukButton({
+          href: "",
+          text: "Save and come back later",
+          classes: "govuk-button--secondary"
+        }) }}
+
+      </div>
 
     </form>
 
