--- a/app/views/before-you-start/v12/date-of-intent.html
+++ b/app/views/before-you-start/v12/date-of-intent.html
@@ -27,7 +27,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="/intentfinish" method="post">
+    <form action="/intentfinish-v12" method="post">
 
       <span class="govuk-caption-l">
         Before you start
