--- a/app/views/enforcement/v4/before-you-continue.html
+++ b/app/views/enforcement/v4/before-you-continue.html
@@ -59,6 +59,7 @@
 
       <div class="govuk-button-group">
         {{ govukButton({
+          href: "task-list",
           text: "Continue to the appeal"
         }) }}
 
