--- a/app/views/enforcement/v4/appeal-site/site-interest.html
+++ b/app/views/enforcement/v4/appeal-site/site-interest.html
@@ -24,7 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="siteinterest" method="post">
+      <form action="siteinterest-v4" method="post">
 
         <span class="govuk-caption-l">
           Tell us about the appeal site
