--- a/app/views/enforcement/v4/check-your-answers.html
+++ b/app/views/enforcement/v4/check-your-answers.html
@@ -22,7 +22,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
 
-      <form action="" method="post">
+      <form action="declaration" method="post">
 
         <span class="govuk-caption-l">
           Check your answers and submit your appeal
