--- a/app/views/enforcement/v4/upload/planning-obligation-status.html
+++ b/app/views/enforcement/v4/upload/planning-obligation-status.html
@@ -54,7 +54,7 @@
             checked: checked("enforcement-planning-obligation-status", "In draft")
           },
           {
-            value: "not-started",
+            value: "Not started yet",
             text: "Not started yet",
             checked: checked("enforcement-planning-obligation-status", "Not started yet")
           }
