--- a/app/views/enforcement/v4/procedure/inquiry-witnesses.html
+++ b/app/views/enforcement/v4/procedure/inquiry-witnesses.html
@@ -27,7 +27,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <form action="endprocedure" method="post">
+    <form action="common-ground" method="post">
 
       <span class="govuk-caption-l">
         Tell us how you would prefer us to decide your appeal
@@ -56,7 +56,7 @@
           text: "Save and come back later",
           classes: "govuk-button--secondary"
         }) }}
-        
+
       </div>
 
     </form>
