--- a/app/views/enforcement/v4/grounds/groundA.html
+++ b/app/views/enforcement/v4/grounds/groundA.html
@@ -51,11 +51,11 @@
 
         </div>
 
-        <p class="govuk-body">
+        <!-- <p class="govuk-body">
           <a href="groundA?enforcement-reason-method=file" class="govuk-link">
             Or upload your reasons in a document
           </a>
-        </p>
+        </p> -->
 
         {% else %}
 
@@ -90,11 +90,11 @@
           '
         }) }}
 
-        <p class="govuk-body">
+        <!-- <p class="govuk-body">
           <a href="groundA?enforcement-reason-method=text" class="govuk-link">
             Or explain your reasons using a text box
           </a>
-        </p>
+        </p> -->
 
         {% endif %}
         <div class="govuk-button-group">
