--- a/app/views/enforcement/v4/grounds/groundE.html
+++ b/app/views/enforcement/v4/grounds/groundE.html
@@ -28,7 +28,7 @@
       Choose your grounds of appeal
     </span>
 
-    <form action="" method="post">
+    <form method="post">
 
       <div class="govuk-form-group">
 
@@ -51,11 +51,11 @@
 
         </div>
 
-        <p class="govuk-body">
+        <!-- <p class="govuk-body">
           <a href="groundE?enforcement-reason-method=file" class="govuk-link">
             Or upload your reasons in a document
           </a>
-        </p>
+        </p> -->
 
         {% else %}
 
@@ -90,33 +90,19 @@
           '
         }) }}
 
-        <p class="govuk-body">
+        <!-- <p class="govuk-body">
           <a href="groundE?enforcement-reason-method=text" class="govuk-link">
             Or explain your reasons using a text box
           </a>
-        </p>
+        </p> -->
 
         {% endif %}
 
         <div class="govuk-button-group">
 
-          <!-- route user based on what they selected -->
-          {% if data['grounds-6'] %}
-            {{ govukButton({
-              href: "groundF",
-              text: "Save and continue"
-            }) }}
-          {% elif data['grounds-7'] %}
-            {{ govukButton({
-              href: "groundG",
-              text: "Save and continue"
-            }) }}
-          {% else %}
-            {{ govukButton({
-              href: "application",
-              text: "Save and continue"
-            }) }}
-          {% endif %}
+          {{ govukButton({
+            text: "Save and continue"
+          }) }}
 
           {{ govukButton({
             href: "",
